fix: map name overflowing in match preview container (liga-292)

--- a/app/renderer/screens/main/components/match-preview/match-preview.scss
+++ b/app/renderer/screens/main/components/match-preview/match-preview.scss
@@ -31,6 +31,9 @@
 }
 
 .match-preview-footer {
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
   text-align: center;
 
   span {
